# JuceCMakeBuilder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  postinstall  readme.txt
Scripts/: README.md  preinstall
Source/: CustomLookAndFeel.h  JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h  RotaryKnobWithLabel.h  SpectrumAnalyzer.h
